--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,7 @@
     "paper-tabs": "PolymerElements/paper-tabs#^1.5.0",
     "vaadin-date-picker": "^1.0.0",
     "vaadin-grid": "^1.0.0",
-    "polymerfire": "^0.9.0"
+    "polymerfire": "firebase/polymerfire#^0.9.2"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
