--- a/bower.json
+++ b/bower.json
@@ -1,39 +1,21 @@
 {
-  "name": "app-drawer-template",
-  "authors": [
-    "The Polymer Authors"
-  ],
-  "private": true,
+  "name": "Beer Club",
+  "description": "Beer Club application",
+  "main": "index.html",
   "dependencies": {
-    "app-layout": "polymerlabs/app-layout#master",
-    "app-route": "polymerelements/app-route#~0.9.0",
-    "iron-flex-layout": "polymerelements/iron-flex-layout#^1.0.0",
-    "iron-icon": "polymerelements/iron-icon#^1.0.0",
-    "iron-iconset-svg": "polymerelements/iron-iconset-svg#^1.0.0",
-    "iron-localstorage": "polymerelements/iron-localstorage#^1.0.0",
-    "iron-media-query": "polymerelements/iron-media-query#^1.0.0",
-    "iron-pages": "polymerelements/iron-pages#^1.0.0",
-    "iron-selector": "polymerelements/iron-selector#^1.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.1",
-    "polymer": "polymer/polymer#^1.4.0",
-    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
-    "iron-form": "PolymerElements/iron-form#^1.0.16",
-    "iron-a11y-keys": "PolymerElements/iron-a11y-keys#^1.0.4",
-    "paper-dialog": "PolymerElements/paper-dialog#^1.0.4",
-    "paper-button": "PolymerElements/paper-button#^1.0.12",
-    "paper-input": "PolymerElements/paper-input#^1.1.11",
-    "paper-card": "PolymerElements/paper-card#^1.1.1",
+    "polymer": "Polymer/polymer#^1.4.0",
+    "polymerfire": "firebase/polymerfire#^0.9.2",
+    "app-layout": "PolymerElements/app-layout#^0.9.1",
+    "iron-selector": "PolymerElements/iron-selector#^1.5.2",
     "paper-item": "PolymerElements/paper-item#^1.2.1",
-    "paper-menu": "PolymerElements/paper-menu#^1.2.2",
-    "paper-tabs": "PolymerElements/paper-tabs#^1.5.0",
-    "vaadin-date-picker": "^1.0.0",
-    "vaadin-grid": "^1.0.0",
-    "polymerfire": "firebase/polymerfire#^0.9.2"
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2",
+    "paper-tabs": "PolymerElements/paper-tabs#^1.6.2",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.7"
   },
   "devDependencies": {
-    "web-component-tester": "^4.0.0"
-  },
-  "resolutions": {
-    "polymer": "^1.4.0"
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
+    "web-component-tester": "^4.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
   }
 }
