--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "paper-item": "PolymerElements/paper-item#^1.2.1",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2",
     "paper-tabs": "PolymerElements/paper-tabs#^1.6.2",
-    "iron-pages": "PolymerElements/iron-pages#^1.0.7"
+    "iron-pages": "PolymerElements/iron-pages#^1.0.7",
+    "paper-menu-button": "PolymerElements/paper-menu-button#^1.1.1",
+    "paper-menu": "PolymerElements/paper-menu#^1.2.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
