--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "paper-tabs": "PolymerElements/paper-tabs#^1.6.2",
     "iron-pages": "PolymerElements/iron-pages#^1.0.7",
     "paper-menu-button": "PolymerElements/paper-menu-button#^1.1.1",
-    "paper-menu": "PolymerElements/paper-menu#^1.2.2"
+    "paper-menu": "PolymerElements/paper-menu#^1.2.2",
+    "paper-dialog": "PolymerElements/paper-dialog#^1.0.4",
+    "paper-input": "PolymerElements/paper-input#^1.1.12"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
